@@ -1,0 +1,2 @@
+//# sourceURL=https://日本語.com/
+// Running this file should not crash on Debug build.
