@@ -1,3 +1,12 @@
+2021-08-11  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        WTFCrash in JSC::Lexer<char16_t>::append8
+        https://bugs.webkit.org/show_bug.cgi?id=228982
+
+        Reviewed by Mark Lam.
+
+        * stress/directive-includes-non-latin1.js: Added.
+
 2021-08-09  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [JSC] super-Latin1 white space and line terminator after regular expression literal misinterpreted as flags
